--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -34,6 +35,12 @@ dependencies {
     // Google Dependencies
     // Material
     implementation "com.google.android.material:material:$material_version"
+
+    // Android Architecture Components Dependencies
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Unit Testing Dependencies
     testImplementation "junit:junit:$junit_version"
